[package]
name = "jfo"
version = "0.1.0"
authors = ["Julio Biason <julio.biason@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = "*"
serde_derive = "*"
toml = "0.5"
